MS: repairing pom for test