@@ -259,6 +259,7 @@
 					<argLine>
 						-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
 						-Dcoverage-classes=loaded
+                                                --add-module org.update4j
 						--add-opens fx/org.unigrid.janus.controller=ALL-UNNAMED
 						--add-opens fx/org.unigrid.janus.controller.component=ALL-UNNAMED
 						--add-opens fx/org.unigrid.janus.model=ALL-UNNAMED
@@ -287,6 +288,7 @@
 						--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
 						--add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 						--add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+                                                --add-reads org.update4j/fx
 					</argLine>
 					<systemPropertyVariables>
 						<glass.platform>Monocle</glass.platform>
